Finalized Plotly Assignment

--- a/index.html
+++ b/index.html
@@ -1,3 +1,58 @@
+<!--<!DOCTYPE html
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>SpaceX API</title>
+</head>
+<body>
+  <h1>Open the console!</h1>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.7/d3.min.js"></script>
+  <script src="spaceX.js"></script>
+</body>
+</html>-->
+
+<!--<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Events</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.7/d3.min.js"></script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+</head>
+<body>
+  <div id="menu"></div>
+  <select id="selectOption">
+    <option value="option1">First Option</option>
+    <option value="option2">Second Option</option>
+  </select>
+<script src="script.js"></script>
+</body>
+</html>-->
+
+<!--<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Events</title>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+</head>
+<body>
+  <div id="plot"></div>
+  <select id="dropdownMenu">
+    <option value="dataset1">DataSet1</option>
+    <option value="dataset2">DataSet2</option>
+  </select>
+  <script src="plots.js"></script>
+</body>
+</html>-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,6 +62,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bellybutton Biodiversity</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel ="stylesheet" href="static/css/style.css">
 </head>
 
 <body>
@@ -14,9 +70,18 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
-        <h1>Belly Button Biodiversity Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
+        <h1><font color="white">Belly Button Biodiversity Dashboard</h1>
+        <p>Use the interactive charts below to explore the dataset</font></p>
       </div>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-6">
+            <h3>Bacterial Data Analysis <small>Identifying Improbable Beef</small></h3>
+          </div>
+          <div class="col-md-6">
+            <p>
+              The analysis and visualizations included were drawn from the bacterial data for each volunteer. We are able to look into the top 10 bacterial species in each of their belly buttons. If Improbable Beef identifies a species as a candidate to manufacture synthetic beef, we will be able to see which volunteers had the species in their navel. 
+            </p>
     </div>
     <div class="row">
       <div class="col-md-2">
@@ -48,7 +113,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="./js/charts.js"></script>
+  <script src="js/charts.js"></script>
 
 </body>
 
